--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 <head>
 <title>CICT STUDIO</title>
 </head>
 <body>
-<h1>»¶Ó­À´µ½CICT STUDIOµÄ¹Ù·½ÍøÒ³</h1>
+<h1>æ¬¢è¿Žæ¥åˆ°CICT STUDIOçš„å®˜æ–¹ç½‘é¡µ</h1>
 
-<b>´¿html¡£¡£¡£µ«ÊÇÎÒÃÇÐèÒªÐ´ÍøÒ³´úÂëµÄÈË <a href="https://space.bilibili.com/2041972507">ÎÒµÄßÙÁ¨ßÙÁ¨Ö÷Ò³</4a></b>
+<b>çº¯htmlã€‚ã€‚ã€‚ä½†æ˜¯æˆ‘ä»¬éœ€è¦å†™ç½‘é¡µä»£ç çš„äºº <a href="https://space.bilibili.com/2041972507">æˆ‘çš„å“”å“©å“”å“©ä¸»é¡µ</4a></b>
 
 <hr />
-<blockquote>ÄãÏëÌåÑéÎÒµÄalpha£¨°æ±¾£©ÏµÍ³Âð£¬ËûÖ»ÓÐ°²×°¹ý³Ì¡£¡£¡£<a href="/lcitsoslstalpha.html">
+<blockquote>ä½ æƒ³ä½“éªŒæˆ‘çš„alphaï¼ˆç‰ˆæœ¬ï¼‰ç³»ç»Ÿå—ï¼Œä»–åªæœ‰å®‰è£…è¿‡ç¨‹ã€‚ã€‚ã€‚<a href="/lcitsoslstalpha.html">
 </hr>
 </body>
 </html>
