--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <b>纯html。。。但是我们需要写网页代码的人 <a href="https://space.bilibili.com/2041972507">我的哔哩哔哩主页</4a></b>
 
 <hr />
-<blockquote>你想体验我的alpha（版本）系统吗，他只有安装过程。。。<a href="/lcitsoslstalpha.html">
+你想体验我的alpha（版本）系统吗，他只有安装过程。。。<a href="lcitsoslstalpha.html">
 </hr>
 </body>
 </html>
