--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <body>
 <h1>欢迎来到CICT STUDIO的官方网页</h1>
 
-<b>纯html。。。但是我们需要写网页代码的人 <a href="https://space.bilibili.com/2041972507">我的哔哩哔哩主页</4a></b>
+<b>纯html <a href="https://space.bilibili.com/2041972507">我的哔哩哔哩主页</4a></b>
 
 <hr />
-你想体验我的alpha（版本）系统吗，他只有安装过程。。。<a href="lcitsoslstalpha.html">
+QQ 1981948312
 </hr>
 </body>
 </html>
